OpenJMLTest/test/gitbug445/expected
test/gitbug445/Pair.java:16: error: The token refining is illegal or not implemented for a type or method clause (JmlParser.classOrInterfaceBodyDeclaration)
      @   refining normal_behavior   // ERROR - no refining keyword here
          ^
test/gitbug445/Pair.java:15: error: Method specifications without a following method declaration
    /*@ public model_program 
               ^
Operation not performed because of parse or type errors
2 errors
